RST-3355 change declaration statement to Statement of Truth
**JIRA**
[RST-3355](https://tools.hmcts.net/jira/browse/RST-3355)

**Description**
Replace the declaration statement with the Statement of Truth

--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -636,5 +636,7 @@ en:
               blank: Enter your full name
             declaration_signee_capacity:
               inclusion: Select who is making this declaration
+            declaration_confirmation:
+              inclusion: Select the statement that applies to confirm the Statement of Truth
             c100_application:
               invalid: Some information is missing # fulfilment validation error
