--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -779,10 +779,8 @@ en:
           page_title: Check your answers
           heading: Check your answers
           lead_text: Please review your answers before you finish your application.
-          declaration_heading: Declaration
-          declaration_lead_text: By entering your full name, you confirm that the facts stated in this application are true.
-          warning_title: Warning
-          false_information_warning: You could be fined or imprisoned for contempt of court if you deliberately submit false information, or cause false information to be submitted.
+          statement_heading: Statement of Truth
+          statement_lead_text: I understand that proceedings for contempt of court may be brought against anyone who makes, or causes to be made, a false statement in a document verified by a statement of truth without an honest belief in its truth.
           submit_warning:
             online: Once you submit your application, you cannot make any further changes. You can download a copy of your submitted application on the next page.
             online_payment: Once you submit your application, you cannot make any further changes. You will be able to download a copy of your submitted application after you have paid the %{fee} court fee.
@@ -1311,6 +1309,10 @@ en:
         receipt_email: Enter an email address if you would like to get a confirmation
       steps_application_declaration_form:
         declaration_signee: Enter your full name
+        declaration_confirmation_options:
+          applicant: I believe that the facts stated in this from and any continuation sheet are true
+          representative_html: |
+            The applicant believes that the facts stated in this form and any continuation sheets are true. <br />I am authorised by the applicant to sign this statement.<br />This option should only selected if the legal representative is signing the form on behalf of the applicant.
         declaration_signee_capacity_options:
           applicant: I am the applicant and I believe that the facts stated in this application are true.
           representative: I am the solicitor. The applicant believes that the facts stated in this application are true and I have been given the authority to make this declaration.
