RST-3336 Applicant select to provide email
**JIRA**
[RST-3336](https://tools.hmcts.net/jira/browse/RST-3336)

**Description**

Applicant must states whether an email is provided

--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -532,6 +532,10 @@ en:
       question: Home telephone number
     person_mobile_phone:
       question: Mobile telephone number
+    person_email_provided:
+      question: Email provided
+      answers:
+        <<: *YESNO
     person_email:
       question: Email address
     person_voicemail_consent:
