--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -20,6 +20,7 @@ en:
       father: Father
       guardian: Guardian
       special_guardian: Special Guardian
+      grand_parent: Grand Parent
       other: Other
 
     # Important: maintain these orders in sync with the rest of locale files
