--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1007,7 +1007,7 @@ en:
       privacy: Privacy
       terms_and_conditions: Terms and conditions
     phase_banner:
-      feedback_contact_html: This is a new service. <a href="/about/contact" class="govuk-link govuk-link--no-visited-state">Report a problem</a> and help improve it for others.
+      feedback_contact_html: This is a new service. <a href="https://www.smartsurvey.co.uk/s/C100Citizen_feedback/" class="govuk-link govuk-link--no-visited-state" target="_blank">Provide feedback (opens in a new tab)</a> and help improve it for others.
     current_user_menu:
       logout: Sign out
       change_password: Change password
