--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -291,9 +291,7 @@ en:
         edit:
           page_title: Respondent address details
           heading: "Address details of %{name}"
-          body_info_html: |
-            Include as much detail as you can. If there’s information missing, your application may take longer to process.<br />
-            It may delay your application if contact details are not provided.
+          body_info_html: Include as much detail as you can. If there’s information missing, your application may take longer to process.
       has_other_parties:
         edit:
           page_title: Other parties who should know about the application
