--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -88,6 +88,7 @@ en:
       address_unknown: Current address unknown
       has_previous_name: Have they changed their name?
       residence_requirement_met: Have they lived at this address for more than 5 years?
+      residence_keep_private: Do you want to keep your address details private from the other people named in the application (the respondents)?
 
     # This is a compilation of all possible fields shared between Applicants, Respondents and Children
     # Please note some locales refer to "you" (applicant) and others to "they" (respondent, etc)
@@ -136,6 +137,10 @@ en:
       residence_requirement_met:
         <<: *YESNO
       residence_requirement_met_options:
+        <<: *YESNO
+      residence_keep_private:
+        <<: *YESNO
+      residence_keep_private_options:
         <<: *YESNO
 
     # Fields shared in all the split first/last name forms
@@ -1742,6 +1747,7 @@ en:
         has_previous_name: Have you changed your name?
       steps_applicant_address_details_form:
         residence_requirement_met: Have you lived at your current address for more than 5 years?
+        residence_keep_private: Do you want to keep your address details private from the other people named in the application (the respondents)?
       steps_applicant_contact_details_form:
         voicemail_consent: Can the court leave you a voicemail?
       steps_shared_under_age_form:
