--- a/config/locales/pdf/en.yml
+++ b/config/locales/pdf/en.yml
@@ -534,6 +534,10 @@ en:
       question: Lived at this address for more than 5 years?
       answers:
         <<: *YESNO
+    residence_keep_private:
+      question: Keep the address private?
+      answers:
+        <<: *YESNO
     person_residence_history:
       question: Previous addresses
     person_home_phone:
@@ -542,6 +546,18 @@ en:
       question: Mobile telephone number
     person_email:
       question: Email address
+    email_keep_private:
+      question: Keep the email address private
+      answers:
+        <<: *YESNO
+    phone_keep_private:
+      question: Keep the home phone number private
+      answers:
+        <<: *YESNO
+    mobile_keep_private:
+      question: Keep the mobile phone number private
+      answers:
+        <<: *YESNO
     person_voicemail_consent:
       question: Allow voicemail?
       answers:
