--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -110,7 +110,7 @@ en:
       dob_unknown_options:
         'true': I don’t know their date of birth
       birthplace_unknown_options:
-        'true': I don’t know their birthplace
+        'true': I don’t know their place of birth
       gender_options:
         female: Female
         male: Male
@@ -125,11 +125,11 @@ en:
       mobile_phone_unknown: *dont_know
       email: Email address
       email_unknown_options:
-        'true': *dont_know
+        'true': I don't know their email
       home_phone_unknown_options:
-        'true': *dont_know
+        'true': I don't know their home phone number
       mobile_phone_unknown_options:
-        'true': *dont_know
+        'true': I don't know their mobile number
 
     PERSONAL_ADDRESS_FIELDS: &PERSONAL_ADDRESS_FIELDS
       address_line_1: Building and street
