--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -518,6 +518,7 @@ en:
         <<: *SEX_OPTIONS
     person_dob:
       question: Date of birth
+      absence_answer: *unknown
     person_age_estimate:
       question: Approximate age or year born
     person_birthplace:
