--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -521,6 +521,8 @@ en:
       absence_answer: *unknown
     person_age_estimate:
       question: Approximate age or year born
+    person_dob_estimate:
+      question: Approximate date of birth
     person_birthplace:
       question: Place of birth
       absence_answer: *unknown
