--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -29,6 +29,7 @@ en:
         future: Date of birth must be in the past
       dob_estimate:
         invalid: Approximate date of birth is not valid
+        invalid: Approximate date of birth must be in the past
       gender:
         inclusion: Select the sex
       birthplace:
