--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -419,6 +419,8 @@ en:
               blank: Enter a mobile number or tell us why the court cannot phone you
             email:
               blank: Enter an email address or tell us why the court cannot email you
+            mobile_provided:
+              inclusion: Enter a mobile number or tell us why the court cannot phone you
             voicemail_consent:
               inclusion: Select yes if the court can leave you a voicemail
             email_keep_private:
