--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -7,6 +7,7 @@ en:
     blank_details_error: &blank_details_error "Enter details"
     blank_exemptions_error: &blank_exemptions_error "Select at least one exemption or ‘None of these’"
     postcode_error: &postcode_error "Enter a valid full postcode, with or without a space"
+    privacy_question_consistency: "Select Yes for at least one privacy question on this page or the previous page, or choose not to keep your contact details private from the named respondents."
 
     # Errors shared in all the split first/last name forms
     NAMES_FORM_ERRORS: &NAMES_FORM_ERRORS
