--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1008,7 +1008,7 @@ en:
       child_protection_cases:
         edit:
           page_title: Child protection cases
-          lead_text: These will often involve a local authority.
+          lead_text: These will usually involve a local authority.
           details:
             summary: Why we use the term ‘children’
             text_html: We use ‘children’ as a general term to mean whether you have a child or children. We do this to avoid repetition.
@@ -1676,7 +1676,7 @@ en:
       steps_opening_research_consent_form:
         research_consent: Are you willing to be contacted to share your experience of using this service?
       steps_opening_child_protection_cases_form:
-        child_protection_cases: Are the children involved in any emergency protection, care or supervision proceedings (or have they been)?
+        child_protection_cases: Does this application concern a child who is the subject of separate ongoing emergency proceedings, care proceedings or supervision proceedings (or is already the subject of an emergency, care or supervision order)?
 
       # MIAM steps
       steps_miam_acknowledgement_form:
