RST-4432 Add new parental responsibility page

--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -238,6 +238,8 @@ en:
       question: Special Guardianship Order in force?
       answers:
         <<: *YESNO
+    parental_responsibility:
+      question: "State everyone who has parental responsibility for %{name} and how they have parental responsibility"
     children_known_to_authorities:
       question: Are any of the children known to social services?
       answers:
