--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -345,6 +345,13 @@ en:
         edit:
           page_title: Special Guardianship Order
           heading: "Is there a Special Guardianship Order in force in relation to %{name}?"
+      parental_responsibility:
+        edit:
+          page_title: Parental responsibility
+          heading: "Parental responsibility for %{name}"
+          subheading: "State everyone who has parental responsibility for %{name} and how they have parental responsibility."
+          hint_html: "<p class='govuk-hint'>For example 'child's mother', or 'child's father who was married to the mother when the child was born.'</p>
+          <p class='govuk-body'><a target='_blank' href='https://www.gov.uk/government/publications/family-court-applications-that-involve-children-cb1'>See section E of leaflet CB1 for more information</a></p>"
       additional_details:
         edit:
           page_title: Further information about the children
