--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -504,7 +504,10 @@ en:
       question: Is there anyone else who should know about your application?
       answers:
         <<: *YESNO
-
+    person_privacy_known:
+      question: Do the other people named in this application (the respondents) know any of your contact details?
+    person_contact_details_private:
+      question: Do you want to keep your contact details private from the other people named in the application (the respondents)?
     person_full_name:
       question: Full name
     person_previous_name:
