--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -264,24 +264,24 @@ en:
       privacy_known:
         edit:
           page_title: Contact details confidentiality
-          heading: Keeping your contact details private
-          privacy_known: Do the other people named in this application (the respondents) know any of your contact details?
+          heading: "Keeping %{name}'s contact details private"
+          privacy_known: Do the other people named in this application (the respondents) know any of their contact details?
       privacy_preferences:
         edit:
           page_title: Contact details confidentiality
-          heading: Keeping your contact details private
+          heading: "Keeping %{name}'s contact details private"
           lead_text_html: |
-            <p class="govuk-body">The answers you give in your response will be shared with other people named in this application (the respondents). This will include your contact details.</p>
-            <p class="govuk-body">For example, if you believe the other people in the case pose a risk to you or your children, you can ask the court to keep your contact details private.</p>
+            <p class="govuk-body">The answers you give in your response will be shared with other people named in this application (the respondents). This will include %{name}'s contact details.</p>
+            <p class="govuk-body">For example, if you believe the other people in the case pose a risk to you or your children, you can ask the court to keep %{name}'s contact details private.</p>
             <p class="govuk-body"><strong>Please note:</strong> you will need to make sure that any form or document, either completed by you now, or at a later date, for use in court <strong>does not</strong> contain the information you wish to keep private. This includes documents received from other people e.g. medical reports or financial statements etc.</p>
-            <p class="govuk-body">The court staff are not able to check the documents you submit to the court for any unintentional disclosure of your contact details.</p>
+            <p class="govuk-body">The court staff are not able to check the documents you submit to the court for any unintentional disclosure of %{name}'s contact details.</p>
       privacy_summary:
         show:
           page_title: Contact details confidentiality
-          heading: The court will keep your contact details private
-          heading_not_private: The court will not keep your contact details private
+          heading: "The court will keep %{name}'s contact details private"
+          heading_not_private: "The court will not keep %{name}'s contact details private"
           body_text_html: <p class="govuk-body">You have told us you want to keep these contact details private</p>
-          body_text_not_private_html: <p class="govuk-body">You have told us the other people named in this application do not know any of your contact details, or you do not want to keep your contact details private from the other people named in this application (the respondents).</p>
+          body_text_not_private_html: <p class="govuk-body">You have told us the other people named in this application do not know any of %{name}'s contact details, or you do not want to keep %{name}'s contact details private from the other people named in this application (the respondents).</p>
           second_text_html: |
             <h2 class="govuk-heading-m">What the court will do</h2>
             <p class="govuk-body">The court will hold this information securely and it will not be shared with any other party except Cafcass (Children and Family Court Advisory and Support Service) or Cafcass CYMRU unless it is by order of the court.</p>
@@ -1634,7 +1634,7 @@ en:
         orders_collection_options:
           specific_issues_child_return: If the children have been abducted, unlawfully removed or unlawfully retained
       steps_applicant_privacy_preferences_form:
-        contact_details_private: You've stated that the respondents know some of your contact details. Make sure you select the contact details the applicants do not already know.
+        contact_details_private: You've stated that the respondents know some of their contact details. Make sure you select the contact details the applicants do not already know.
       steps_applicant_personal_details_form:
         has_previous_name: For example, through marriage or adoption or by deed poll. This includes first name, surname and any middle names
         previous_name: *previous_name_hint
@@ -1830,9 +1830,9 @@ en:
 
       # Applicant
       steps_applicant_privacy_known_form:
-        privacy_known: Do the other people named in this application (the respondents) know any of your contact details?
+        privacy_known: Do the other people named in this application (the respondents) know any of their contact details?
       steps_applicant_privacy_preferences_form:
-        are_contact_details_private: Do you want to keep your contact details private from the other people named in the application (the respondents)?
+        are_contact_details_private: Do you want to keep their contact details private from the other people named in the application (the respondents)?
         contact_details_private: Which contact details do you want to keep private from the other people in this application?
       steps_applicant_personal_details_form:
         <<: *PERSONAL_DETAILS_LEGENDS
