--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -266,10 +266,10 @@ en:
           page_title: Contact details confidentiality
           heading: "Keeping %{name}'s contact details private"
           lead_text_html: |
-            <p class="govuk-body">The answers you give in your response will be shared with other people named in this application (the respondents). This will include %{name}'s contact details.</p>
-            <p class="govuk-body">For example, if you believe the other people in the case pose a risk to you or your children, you can ask the court to keep %{name}'s contact details private.</p>
+            <p class="govuk-body">The answers you give in your response will be shared with other people named in this application (the respondents). This will include your contact details.</p>
+            <p class="govuk-body">For example, if you believe the other people in the case pose a risk to you or your children, you can ask the court to keep your contact details private.</p>
             <p class="govuk-body"><strong>Please note:</strong> you will need to make sure that any form or document, either completed by you now, or at a later date, for use in court <strong>does not</strong> contain the information you wish to keep private. This includes documents received from other people e.g. medical reports or financial statements etc.</p>
-            <p class="govuk-body">The court staff are not able to check the documents you submit to the court for any unintentional disclosure of %{name}'s contact details.</p>
+            <p class="govuk-body">The court staff are not able to check the documents you submit to the court for any unintentional disclosure of your contact details.</p>
       privacy_summary:
         show:
           page_title: Contact details confidentiality
