--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -276,7 +276,7 @@ en:
           heading: "The court will keep %{name}'s contact details private"
           heading_not_private: "The court will not keep %{name}'s contact details private"
           body_text_html: <p class="govuk-body">You have told us you want to keep these contact details private</p>
-          body_text_not_private_html: <p class="govuk-body">You have told us the other people named in this application do not know any of %{name}'s contact details, or you do not want to keep %{name}'s contact details private from the other people named in this application (the respondents).</p>
+          body_text_not_private_html: <p class="govuk-body">You have told us the other people named in this application do not know any of your contact details, or you do not want to keep your contact details private from the other people named in this application (the respondents).</p>
           second_text_html: |
             <h2 class="govuk-heading-m">What the court will do</h2>
             <p class="govuk-body">The court will hold this information securely and it will not be shared with any other party except Cafcass (Children and Family Court Advisory and Support Service) or Cafcass CYMRU unless it is by order of the court.</p>
